# SJTU_Coursework

./: README.md
VE270/LAB/lab1/: 0.ms14  FA.ms14  FA.ms14 (Security copy)  FA_1.ms14 (Security copy)  Lab-1.ms14  a.ms14  a.ms14 (Security copy)  lab1.bit  lab1.ms14  lab1.ms14 (Security copy)  lab1_1.ms14
VE270/LAB/lab2/: a and b.ms14  a and b.ms14 (Security copy)  a or b.ms14  a or b.ms14 (Security copy)  a+b.ms14  a+b.ms14 (Security copy)  a-b.ms14  a-b.ms14 (Security copy)  a_1.ms14  a_1.ms14 (Security copy)  b.ms14 (Security copy)  c.ms14  d.ms14 (Security copy)  e.ms14 (Security copy)  f.ms14 (Security copy)  full subtractor.ms14 (Security copy)  g.ms14  lab 3.ms14  lab 3.ms14 (Security copy)  lab2.ms14  lab2.ms14 (Security copy)  lab2_final.ms14  lab2_final.ms14 (Security copy)  lab3.bit  ssd d.ms14  ssd d.ms14 (Security copy)  ssd driver.ms14  ssd driver.ms14 (Security copy)  ssdd.bit
VE270/LAB/lab3/: MUX1.ms14  MUX2_3.ms14  MUX3_3.ms14  MUX4_3.ms14  MUX5_3.ms14  OR.ms14  add_3.ms14  and_3.ms14  lab3_2.ms14  lab3_total.ms14  sub_3.ms14
VE270/LAB/lab4/: LAB4.xpr  vivado.jou  vivado_12192.backup.jou  vivado_19988.backup.jou  vivado_20352.backup.jou  vivado_20812.backup.jou  vivado_22240.backup.jou
VE270/LAB/lab7/: lab7.xpr  vivado.jou
VE270/hw/HW5/: HW5.docx  新建 Microsoft Word 文档.docx
VE270/hw/HW6/: hw6.docx
VE280/p1/p1/: p1.cpp
VE280/p2/Project-2-Related-Files/: CMakeLists.txt  TEST.cpp  p2.cpp  test1.cpp  test_wyx.cpp
VE280/p3/3/: CMakeLists.txt  main.cpp  p3.cpp  p3_3.cpp  p3_4.cpp  simulation.cpp  simulation.h  world_file.txt
VE280/p3/3/creatures/: flytrap.txt  hop.txt  landmine.txt  stander.txt
VE280/p4/p4/: CMakeLists.txt  board.cpp  game.cpp  piece.cpp  player.cpp  pool.cpp  square.cpp  test.cpp
VE280/p5/p5/: 123.cpp  CMakeLists.txt  calc.cpp  call.cpp  dlist_impl.h  main.cpp
VE281/1/: Lab01-JintianGe.tex  Lab01-Preliminary.tex
VE281/1/1/: main.cpp
VE281/2/: Lab02-JintianGe.tex
VE281/3/: 新建 Microsoft Word 文档.docx
VE281/3/1/: main  main.cpp
VE281/3/3/: main.cpp
VE281/3/VE281_LAB3/: Makefile
VE281/4/: Lab04-Hashing.tex
VE281/5/: performance.docx  result_count.xlsx
VE281/5/5/: CMakeLists.txt  Makefile  binary_heap.h  fib_heap.h  game.cpp  game.h  main  main.cpp  opt.cpp  performance.cpp  priority_queue.h  test_heap.cpp  unsorted_heap.h
VE281/6/: Lab06-HeapsAndBST.tex  Lab06-JintianGe.tex
VE281/7/: Lab07-JintianGe.tex  lab07-Trees.tex
VE281/8/: Lab08-Graphs.tex
VE370/P1/: Program.txt  p1.txt
VE370/P2/: pipeline_result.txt  single_result.txt
VE370/P3/: P3Group4_peer.docx
VE444/PRJ/: prj.py
VE450/: Methods.py  document.docx  picture_division.py  train_ssd.py
VE450/CPP_seg/: CMakeLists.txt  main.cpp
VE450/C_CODE/: CMakeLists.txt
VE450/DR3/: dr3_gjt.pptx
VE450/SixGod-master/: CMakeLists.txt  Map.cpp  Map.h  README.md  Triangulation.cpp  Triangulation.h  camera.cpp  camera.h  lidar.cpp  lidar.h  main.cpp  main.h  mm.sh  show.cpp  spi.cpp  spi.h  stop.cpp  test.cpp  uart.cpp  uart.h
VE450/SixGod-master/frozen/3conv_complex/: frozen_graph.pb
VE450/SixGod-master/include/: CMakeLists.txt  sdkcommon.h  thread.cpp
VE450/TEST/: CMakeLists.txt  Map.cpp  Map.h  Triangluation.cpp  Triangluation.h  main.cpp  main.h
VE450/cpppy/: CMakeLists.txt  main.cpp
VE450/final/: fff.pptx
VE460/slides/: Chapter02_Matlab.m  Chapter03_Matlab.m  Chapter04_Matlab.m  Chapter06_Matlab.m  Chapter07_Matlab.m  Chapter08_Matlab.m  Chapter09_Matlab.m
VE492/p0/: addition.py
VE492/p2/: commands.txt
VE492/p3/: commands.txt
VE492/p5/: inference.py
VG101/exam1/: Untitled5.m  ex1.m  ex2.m  ex3.m  readme.txt  the peppers image.html
VG101/exam2/: CMakeLists.txt  Readme.txt  assignment.c  assignment.h  ex1.c  ex2.c  ex3.c  main.c
VG101/exam3/: Readme.txt
VG441/1/: GBM.py  LinReg.py  XGB.py
VG441/2/: demand.xls  demand.xlsx  import numpy.py
VG441/3/: P3.docx  Q1.ipynb
VG441/final/: Final.docx
VG441/mid/: P1.ipynb  P3_MILP.ipynb
(+290 files in other folders)
