cmake_minimum_required(VERSION 3.12)
project(3)

set(CMAKE_CXX_STANDARD 14)
add_executable(p3
        p3.cpp
        simulation.h
        simulation.cpp
        world_type.h
)
add_executable(    p3_2
        main.cpp
        simulation.h
        simulation.cpp
        world_type.h
)
add_executable(p3_3
        p3_3.cpp
        simulation.h
        simulation.cpp
        world_type.h)
add_executable(p3_4
        p3_4.cpp
        simulation.h
        simulation.cpp
        world_type.h)